corrected outputs match to JDK version